# recisdb-proxy-rs

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: build.yml
b25-sys/: build.rs
bondriver-proxy-client/: BonDriver_NetworkProxy.ini.sample  Cargo.toml
bondriver-proxy-client/src/: config.rs  lib.rs  logging.rs
bondriver-proxy-client/src/bondriver/: exports.rs  interface.rs  mod.rs
bondriver-proxy-client/src/client/: buffer.rs  connection.rs  mod.rs
docs/: ARCHITECTURE.md  BonDriverCapacityControl.md  BonDriverIntegratedPlan.md  CLIENT_GROUP_MATCHING_SUMMARY.md  CODE_REVIEW.md  ClientConnectionSequence.md  DATABASE_REGION_FIX.md  GROUP_MATCHING_IMPLEMENTATION.md  GROUP_MATCHING_IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  LOGGING.md  OpenTunerFix.md  PHASE3_GROUP_MATCHING_COMPLETION.md  PriorityChannelSelection.md  QUICKSTART.md  TVTestCrashAnalysis.md  WEB_DASHBOARD.md
docs/migrations/: 001_add_max_instances.sql  002_fill_band_type_and_region.sql
docs/old/: BonDriverAutoScanPlan.md  BonDriverProxyPlan.md
recisdb-protocol/: Cargo.toml
recisdb-protocol/src/: broadcast_region.rs  codec.rs  error.rs  lib.rs  types.rs
recisdb-proxy/: Cargo.toml  build.rs  recisdb-proxy-rs.service  recisdb-proxy.toml.example
recisdb-proxy/src/: alert.rs  aribb24.rs  aribb24_wrap.c  lib.rs  logging.rs  main.rs  metrics.rs  setup.rs
recisdb-proxy/src/bondriver/: linux.rs  mod.rs  unix.rs  windows.rs
recisdb-proxy/src/database/: alert.rs  bon_driver.rs  channel.rs  driver_quality.rs  mod.rs  models.rs  schema.rs  session_history.rs
recisdb-proxy/src/scheduler/: mod.rs  scan_scheduler.rs
recisdb-proxy/src/server/: listener.rs  mod.rs  session.rs
recisdb-proxy/src/ts_analyzer/: analyzer.rs  descriptors.rs  mod.rs  pmt.rs  service_filter.rs
recisdb-proxy/src/tuner/: b25_pipe.rs  channel_key.rs  group_space.rs  lock.rs  logo_collector.rs  mod.rs  passive_scanner.rs  pool.rs  quality_scorer.rs  selector.rs  shared.rs  space_generator.rs  ts_analyzer.rs  ts_parser.rs  warm.rs
recisdb-proxy/src/web/: api.rs  dashboard.rs  mod.rs  state.rs
recisdb-rs/: Cargo.toml  build.rs
recisdb-rs/src/: context.rs  lib.rs  main.rs  tuner.rs
recisdb-rs/src/commands/: database.rs  mod.rs  utils.rs
recisdb-rs/src/database/: bon_driver.rs  channel.rs  mod.rs  models.rs  schema.rs
recisdb-rs/src/ts_analyzer/: descriptors.rs  mod.rs  nit.rs  packet.rs  pat.rs  psi.rs  sdt.rs
recisdb-rs/src/tuner/: unsupported.rs
recisdb-rs/src/tuner/windows/: IBonDriver.cpp  IBonDriver.rs
recisdb-rs/src/tuner/windows/vtable_resolver/: IBonDriver1.cpp  IBonDriver2.cpp  IBonDriver3.cpp
