[package]
name = "recisdb-protocol"
version = "0.1.0"
authors = ["maleicacid <maleicacid824+dev@gmail.com>"]
edition = "2021"
description = "Network protocol definitions for recisdb BonDriver proxy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kazuki0824/recisdb-rs.git"

[dependencies]
thiserror = "1.0"
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
